Complete melodic content demo functionality

--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
               <option value="11th">11th</option>
               <option value="12th">12th</option>
               <option value="Open">Open</option>
+              <option value="Any">Any</option>
             </select>
             </div>
           </form>
+          <button class='generate-melodic-exercise-button hidden'>Generate Exercise</button>
     </div>
     <div class="rhythmic-criteria hidden">
       <div class="subdivision-input-area">
@@ -140,9 +142,9 @@
            <input class="bpm-selection-input" type="text" id="bpm-selection-max" name="bpm-selection-maximum">
            </div>
      </div>
-
+     <button class='generate-rhythmic-exercise-button hidden'>Generate Exercise</button>
     </div>
-    <button class='generate-exercise-button hidden'>Generate Exercise</button>
+<button class='generate-large-exercise-button hidden'>Generate Exercise</button>
   </div>
   <div class="square-3">
     <div class="what-to-practice-display">
