Almost finish debugging rhythm section

--- a/index.html
+++ b/index.html
@@ -124,23 +124,25 @@
       </div>
       <div class="bpm-radio-button-area-area">
         <div class="random-bpm-radiobutton">
-       <input class="random-bpm-radiobutton-radiobuttoninput1" type="radio" id="button4">
+       <input class="random-bpm-radiobutton-input" type="radio" id="button4">
        <label for="button4">Random BPM</label>
      </div>
      <br>
      <div class="user-bpm-radiobutton">
        <input class="user-bpm-radiobutton-input" type="radio" id="button5">
-       <label for="button5">Choose BPM</label>
+       <label for="button5">Choose BPM Range</label>
      </div>
      <br>
+     <div class="bpm-selections hidden">
      <div class="bpm-range-min-input-section">
-            <label for="bpm-selection">Minimum BPM:</label>
-            <input class="bpm-selection-input" type="text" id="bpm-selection-min" name="bpm-selection-minimum">
+            <label for="bpm-selection-min">Minimum BPM:</label>
+            <input class="bpm-selection-minimum-input" type="text" id="bpm-selection-min" name="bpm-selection-minimum">
             </div>
      <div class="bpm-range-max-input-section">
-           <label for="bpm-selection">Maximum BPM:</label>
-           <input class="bpm-selection-input" type="text" id="bpm-selection-max" name="bpm-selection-maximum">
+           <label for="bpm-selection-max">Maximum BPM:</label>
+           <input class="bpm-selection-maximum-input" type="text" id="bpm-selection-max" name="bpm-selection-maximum">
            </div>
+     </div>
      </div>
      <button class='generate-rhythmic-exercise-button hidden'>Generate Exercise</button>
     </div>
