Add more rhythms

--- a/index.html
+++ b/index.html
@@ -115,11 +115,20 @@
       <label for="subdivision-input">Subdivision:</label>
       <select class="subdivision-input-form" name="subdivision-input">
         <option value="Random">Random</option>
+        <option value="whole notes">whole notes</option>
+        <option value="half notes">half notes</option>
         <option value="quarter notes">quarter notes</option>
         <option value="eighth notes">eighth notes</option>
         <option value="sixteenth notes">sixteenth notes</option>
         <option value="eight note triplets">eight note triplets</option>
         <option value="sixteenth note triplets">sixteenth note triplets</option>
+        <option value='quarter notes on upbeats'>quarter notes on upbeats</option>
+        <option value='eighth notes on upbeats'>eighth notes on upbeats</option>
+        <option value='sixteenth notes on upbeats'>sixteenth notes on upbeats</option>
+        <option value='dotted quarter notes'>dotted quarter notes</option>
+        <option value='dotted eighth notes'>dotted eighth notes</option>
+        <option value='dotted quarter notes on upbeats'>dotted quarter notes on upbeats</option>
+        <option value='dotted eighth notes on upbeats'>dotted eighth notes on upbeats</option>
       </select>
       </div>
       <div class="bpm-radio-button-area-area">
