--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
      </div>
      <br>
      <div class="bpm-selections hidden">
-     <div class="bpm-range-min-input-section">
-            <label for="bpm-selection-min">Minimum BPM:</label>
-            <input class="bpm-selection-minimum-input" type="text" id="bpm-selection-min" name="bpm-selection-minimum">
-            </div>
-     <div class="bpm-range-max-input-section">
-           <label for="bpm-selection-max">Maximum BPM:</label>
-           <input class="bpm-selection-maximum-input" type="text" id="bpm-selection-max" name="bpm-selection-maximum">
-           </div>
+       <div class="bpm-range-min-input-section">
+                   <label for="bpm-selection-min">Minimum BPM:</label>
+                   <input class="bpm-selection-minimum-input" type="number" id="bpm-selection-min" name="bpm-selection-minimum">
+                   </div>
+            <div class="bpm-range-max-input-section">
+                  <label for="bpm-selection-max">Maximum BPM:</label>
+                  <input class="bpm-selection-maximum-input" type="number" id="bpm-selection-max" name="bpm-selection-maximum">
+                  </div>
      </div>
      </div>
      <button class='generate-rhythmic-exercise-button hidden'>Generate Exercise</button>
