--- a/index.html
+++ b/index.html
@@ -162,9 +162,32 @@
     </div>
   </div>
   </section>
+
+  <div class="the-metronome">
+
+  <div class="title">Metronome</div>
+   <button id="play-button" class="">
+       <div id="play-pause-icon" class="play"></div>
+   </button>
+
+   <div class="tempo-controls">
+       <button class="tempo-change" data-change="-5">-5</button>
+       <button class="tempo-change" data-change="-1">-</button>
+
+       <div class="tempo-container">
+           <div id="tempo">120</div>
+           <div class="bpm">bpm</div>
+       </div>
+
+       <button class="tempo-change" data-change="+1">+</button>
+       <button class="tempo-change" data-change="+5">+5</button>
+   </div>
+ </div>
+
   <div class="completely-random-button-area">
   <button class='completely-random-exercise'>Generate Completely Random Exercise</button>
   </div>
 </body>
+<script src="metronome.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </html>
