Add set metronome tempo button

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 <button class='generate-large-exercise-button hidden'>Generate Exercise</button>
   </div>
   <div class="square-3">
-    <div class="what-to-practice-display">
-    </div>
+    <div class="what-to-practice-display"></div>
+    <button class="set-tempo-button">Set Metronome Tempo</button>
   </div>
   </section>
 
