Refactor arrays into one file

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
   <button class='completely-random-exercise'>Generate Completely Random Exercise</button>
   </div>
 </body>
+<script src='arrays/allArrays.js'></script>
 <script src="metronome.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </html>
